COMMENT TO PORTFOLIO SECTION

--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -16,7 +16,7 @@
 <!--  TEAM DISPLAYING SECTION   -->
     {% include 'website/team.html' %}
 <!--  PORTFOLIO SECTION -->
-    {% include 'website/portfolio.html' %}
+<!--    {% include 'website/portfolio.html' %}-->
     {% include 'website/service.html' %}
     {% include 'website/testimonials.html' %}
     {% include 'website/pricing.html' %}
