CONTACT INFO CHANGE

--- a/templates/website/contact_us.html
+++ b/templates/website/contact_us.html
@@ -14,19 +14,19 @@
           <div class="col-md-4 text-center">
             <p class="mb-4">
               <span class="icon-room d-block h4 text-primary"></span>
-              <span>203 Fake St. Mountain View, San Francisco, California, USA</span>
+              <span>Phull-gullab road street-3. Mandian, Abbottabad, KPK, Pakistan</span>
             </p>
           </div>
           <div class="col-md-4 text-center">
             <p class="mb-4">
               <span class="icon-phone d-block h4 text-primary"></span>
-              <a href="#">+1 232 3235 324</a>
+              <a href="#">03317782810</a>
             </p>
           </div>
           <div class="col-md-4 text-center">
             <p class="mb-0">
               <span class="icon-mail_outline d-block h4 text-primary"></span>
-              <a href="#"><span class="__cf_email__" data-cfemail="eb92849e998e868a8287ab8f84868a8285c5888486">[email&#160;protected]</span></a>
+              <a href="#"><span class="__cf_email__" data-cfemail="eb92849e998e868a8287ab8f84868a8285c5888486">akhlaqaltaf4@gmail.com</span></a>
             </p>
           </div>
         </div>
