--- a/templates/website/contact_us.html
+++ b/templates/website/contact_us.html
@@ -20,13 +20,17 @@
           <div class="col-md-4 text-center">
             <p class="mb-4">
               <span class="icon-phone d-block h4 text-primary"></span>
-              <a href="#">03317782810</a>
+              <a href="#">+923317782810</a>
+            </p>
+            <p class="mb-4">
+              <span class="icon-phone d-block h4 text-primary"></span>
+              <a href="#">+923255548100</a>
             </p>
           </div>
           <div class="col-md-4 text-center">
             <p class="mb-0">
               <span class="icon-mail_outline d-block h4 text-primary"></span>
-              <a href="#"><span class="__cf_email__" data-cfemail="eb92849e998e868a8287ab8f84868a8285c5888486">akhlaqaltaf4@gmail.com</span></a>
+              <a href="#"><span class="__cf_email__" data-cfemail="eb92849e998e868a8287ab8f84868a8285c5888486">escalators.tech@gmail.com</span></a>
             </p>
           </div>
         </div>
