--- a/templates/website/navbar.html
+++ b/templates/website/navbar.html
@@ -15,7 +15,6 @@
               <a href="/" class="nav-link" data-target="#about-section">About Us</a>
               <ul class="dropdown">
                 <li><a href="/" class="nav-link" data-target="#team-section">Team</a></li>
-                <li><a href="/" class="nav-link" data-target="#pricing-section">Pricing</a></li>
                 <li><a href="/" class="nav-link" data-target="#faq-section">FAQ</a></li>
                 <li class="has-children">
                   <a href="#">More Links</a>
@@ -27,7 +26,7 @@
                 </li>
               </ul>
             </li>
-            <li><a href="/" class="nav-link" data-target="#portfolio-section">Portfolio</a></li>
+<!--            <li><a href="/" class="nav-link" data-target="#portfolio-section">Portfolio</a></li>-->
             <li><a href="/" class="nav-link" data-target="#services-section">Services</a></li>
             <li><a href="/" class="nav-link" data-target="#testimonials-section">Testimonials</a></li>
             <li><a href="/" class="nav-link" data-target="#blog-section">Blog</a></li>
