--- a/templates/website/navbar.html
+++ b/templates/website/navbar.html
@@ -16,13 +16,13 @@
               <ul class="dropdown">
                 <li><a href="/" class="nav-link" data-target="#team-section">Team</a></li>
                 <li><a href="/" class="nav-link" data-target="#faq-section">FAQ</a></li>
-                <li class="has-children">
+                <li href="/" class="nav-link" data-target="#motivation">
                   <a href="#">More Links</a>
-                  <ul class="dropdown">
-                    <li><a href="#">Menu One</a></li>
-                    <li><a href="#">Menu Two</a></li>
-                    <li><a href="#">Menu Three</a></li>
-                  </ul>
+<!--                  <ul class="dropdown">-->
+<!--                    <li><a href="#">Menu One</a></li>-->
+<!--                    <li><a href="#">Menu Two</a></li>-->
+<!--                    <li><a href="#">Menu Three</a></li>-->
+<!--                  </ul>-->
                 </li>
               </ul>
             </li>
