--- a/templates/website/about_us.html
+++ b/templates/website/about_us.html
@@ -11,7 +11,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up">
             <figure class="circle-bg">
-              <img src="{% static 'images/hero_1.jpg' %}" alt="About Us Image" class="img-fluid">
+              <img src="{% static 'images/about_section.jpg' %}" alt="About Us Image" class="img-fluid">
             </figure>
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
