--- a/templates/website/testimonials.html
+++ b/templates/website/testimonials.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row mb-5">
       <div class="col-12 text-center">
-        <h2 class="section-title mb-3">Our Projects</h2>
+        <h2 class="section-title mb-3">Motivations</h2>
         <p>Discover the innovative solutions we are developing to transform industries through technology.</p>
       </div>
     </div>
