--- a/templates/website/navbar.html
+++ b/templates/website/navbar.html
@@ -1,50 +1,62 @@
 {% load static %}
 
-<header class="site-navbar py-1 js-sticky-header site-navbar-target" role="banner">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-6 col-xl-2">
-        <a href="/"><img src="{% static 'images/brand/E1.png' %}" style="width:100px;" /></a>
-      </div>
+{% load static %}
 
-      <div class="col-12 col-md-10 d-none d-xl-block">
-        <nav class="site-navigation position-relative text-right" role="navigation">
-          <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-            <li><a href="/" class="nav-link" data-target="#home-section">Home</a></li>
-            <li class="has-children">
-              <a href="/" class="nav-link" data-target="#about-section">About Us</a>
-              <ul class="dropdown">
-                <li><a href="/" class="nav-link" data-target="#team-section">Team</a></li>
-                <li><a href="/" class="nav-link" data-target="#faq-section">FAQ</a></li>
-                <li href="/" class="nav-link" data-target="#motivation">
-                  <a href="#">More Links</a>
-<!--                  <ul class="dropdown">-->
-<!--                    <li><a href="#">Menu One</a></li>-->
-<!--                    <li><a href="#">Menu Two</a></li>-->
-<!--                    <li><a href="#">Menu Three</a></li>-->
-<!--                  </ul>-->
-                </li>
-              </ul>
+{% load static %}
+
+<!-- Bootstrap 5 Navbar with Hamburger Menu for Small Screens -->
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">
+      <img src="{% static 'images/brand/Escalators.png' %}" alt="Logo" style="width:180px;">
+    </a>
+
+    <!-- Hamburger menu button -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/" data-target="#home-section">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            About Us
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/" data-target="#team-section">Team</a></li>
+            <li><a class="dropdown-item" href="/" data-target="#faq-section">FAQ</a></li>
+            <li >
+              <a class="dropdown-item" href="/" data-target="#motivation">Motivations</a>
             </li>
-<!--            <li><a href="/" class="nav-link" data-target="#portfolio-section">Portfolio</a></li>-->
-            <li><a href="/" class="nav-link" data-target="#services-section">Services</a></li>
-            <li><a href="/" class="nav-link" data-target="#testimonials-section">Testimonials</a></li>
-            <li><a href="/" class="nav-link" data-target="#blog-section">Blog</a></li>
-            <li><a href="/" class="nav-link" data-target="#contact-section">Contact</a></li>
           </ul>
-        </nav>
-      </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/" data-target="#services-section">Services</a>
+        </li>
 
-      <div class="col-6 d-inline-block d-xl-none ml-md-0 py-1" style="position: relative; top: 3px;">
-        <a href="#" class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a>
-      </div>
+        <li class="nav-item">
+          <a class="nav-link" href="/" data-target="#blog-section">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/" data-target="#contact-section">Contact</a>
+        </li>
+      </ul>
     </div>
   </div>
-</header>
+</nav>
 
+<!-- Include Bootstrap 5 JS and CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Optional: Smooth Scroll Script -->
 <script>
   document.addEventListener("DOMContentLoaded", function() {
-    // Smooth scroll to sections when clicking navbar links
+    // Smooth scrolling to section
     const links = document.querySelectorAll('.nav-link');
 
     links.forEach(link => {
@@ -58,16 +70,4 @@
       });
     });
 
-    // Check if there's a hash in the URL on load
-    if (window.location.hash) {
-      const targetElement = document.querySelector(window.location.hash);
-      if (targetElement) {
-        targetElement.scrollIntoView({
-          behavior: 'smooth',
-          block: 'start',
-          inline: 'nearest'
-        });
-      }
-    }
-  });
 </script>
