--- a/templates/website/navbar.html
+++ b/templates/website/navbar.html
@@ -6,6 +6,10 @@
 
 <!-- Bootstrap 5 Navbar with Hamburger Menu for Small Screens -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+      <!-- Development Header Banner -->
+    <div class="development-banner" style="background-color: #ffcc00; padding: 10px 0; text-align: center; color: #333; font-weight: bold;">
+      Our website is currently under development, a better look is coming soon!
+    </div>
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <img src="{% static 'images/brand/Escalators.png' %}" alt="Logo" style="width:180px;">
